--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
       <header>
         <h1>first edit</h1>
       </header>
+      <div>
+        <p>hi there this is another edit</p>
+      </div>
   </body>
 </html>
