--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <h1>first edit</h1>
       </header>
       <div>
-        <p>hi there this is another edit</p>
+        <li>hi there this is another edit</li>
+        <li>hi there this is another edit</li>
       </div>
   </body>
 </html>
