added new branch part for first branch

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
       <div>
         <li>hi there this is another edit</li>
         <li>hi there this is another edit</li>
-<<<<<<< HEAD
         <li>hi there this is another edit</li>
         <li>hi there this is another edit</li>
-        <li>hi there this is another edit</li>
-=======
->>>>>>> parent of 1fe8277... 4th edit
+      </div>
+      <div>
+        <ul>
+          <li>this if or my branch of index</li>
+          <li>the master branch has none of this</li>
+        </ul>
       </div>
   </body>
 </html>
