new part on master not branch

--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
       <div>
         <li>hi there this is another edit</li>
         <li>hi there this is another edit</li>
-<<<<<<< HEAD
         <li>hi there this is another edit</li>
         <li>hi there this is another edit</li>
-        <li>hi there this is another edit</li>
-=======
->>>>>>> parent of 1fe8277... 4th edit
+        <li>changed something here on master and not branch</li>
       </div>
   </body>
 </html>
